--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-LFQ8BWQ894');
+  gtag('config', 'G-YZN8VT4J3T');
 </script>
 </head>
 
