--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>My Awesome Blog</title>
   <link rel="stylesheet" href="style.css" />
-<!--   <!-- Google tag (gtag.js) -->
+<!--   Google tag (gtag.js)
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-LFQ8BWQ894"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
