--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
  
 <section class="video-section">
     <h2 class="txt">Watch My Video</h2>
+    <a href="https://www.w3schools.com">Visit W3Schools.com!</a>
     <video class="vdo" width="auto" height="400" controls autoplay onclick="trackClick('video_play')">
       <source src="./vdo.mp4" type="video/webm" />
       Your browser does not support HTML5 video.
