--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <input type="text" placeholder="Your Name" name="name" required />
       <input type="email" placeholder="Your Email" name="email" required />
       <textarea placeholder="Your Message" name="message" required></textarea>
-      <button id="btn" type="submit">Send Message</button>
+      <button id="btn" data-track-click="Send Message" type="submit">Send Message</button>
     </form>
   </section>
 
